# AERIS-Software

./: CMakeCache.txt  CMakeLists.txt  README.md  addnl funcs  alltogether  gnss maybe 2  gnss.c  gnssmaybe  gnssmaybe3  gnsspvtmaybe  gps2sdmaybe  i2c_program_init  i2cmaybe  initmain  maybe  output  sdmaybe
flight_code/: CMakeLists.txt  gnss.c  lora.h  main.c  main_parker.c  motor.c  motor.h  sdCard.c  sdCard.h
flight_code/include/: config.h  gnss.h  lora.h  motor.h  sdCard.h
flight_code/src/: gnss.c  lora.c  motor.c  sdCard.c
gnss/: CMakeLists.txt  gnss.c  pico_sdk_import.cmake
gnss_sd/: CMakeLists.txt  gnss_logging.c  gnss_sd.c  lmayb2  loggingmaybe  pico_extras_import_optional.cmake
i2c_scan/: CMakeLists.txt  bus_scan.c
lora_testing/: CMakeLists.txt  main.c
lora_testing_receive/: CMakeLists.txt  lora_rx_cont.c  lora_rx_single.c  main.c
motor_test_c/: CMakeLists.txt  motor_test.c
sd_fat_spi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw_config.c  main.c  sd_fat_spi.dis  sd_fat_spi.elf  sd_fat_spi.elf.map  sd_fat_spi.hex  sd_fat_spi.uf2
sd_fat_spi/pico-sdk/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/docs/: Makefile
sd_fat_spi/pico-sdk/src/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/common/boot_picobin_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/boot_picoboot_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/boot_uf2_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/hardware_claim/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_base_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_binary_info/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_divider_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/common/pico_sync/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
sd_fat_spi/pico-sdk/src/common/pico_util/: Makefile
sd_fat_spi/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
sd_fat_spi/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2040/hardware_structs/: Makefile
sd_fat_spi/pico-sdk/src/rp2040/pico_platform/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/hardware_adc/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_base/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_divider/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_dma/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_exception/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_flash/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_interp/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_irq/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_pio/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_pll/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_pwm/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_resets/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/hardware_spi/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_sync/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_ticks/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_timer/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_uart/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_vreg/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_xip_cache/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/hardware_xosc/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_aon_timer/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_async_context/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_atomic/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_bootrom/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_btstack/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_clib_interface/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_crt0/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_cxx_options/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_cyw43_arch/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_cyw43_driver/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_divider/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_double/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_fix/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_flash/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_float/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_i2c_slave/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_int64_ops/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_lwip/: Makefile  cmake_install.cmake
sd_fat_spi/pico-sdk/src/rp2_common/pico_malloc/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_mbedtls/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_mem_ops/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_multicore/: Makefile
sd_fat_spi/pico-sdk/src/rp2_common/pico_platform_compiler/: Makefile
sd_fat_spi/pico-sdk/tools/: Makefile
spi_test/: CMakeLists.txt  main.c  test_spi.c
(+1291 files in other folders)
